# agrivoltaics_irradiance_database_io

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
agrivoltaics_io/: __init__.py  main.py
tutorials/: README.md  _config.yml  _toc.yml  intro.md
tutorials/tutorials/: 1 - Accessing Agrivoltaics Irradiance Data by GID.ipynb
tutorials/tutorials/exports/: 1 - Accessing Agrivoltaics Irradiance Data by GID.py
